added chatbot to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://www.chatnode.ai/embed.js" data-chatbot-id="e071f27255ef9e22" data-color-1="#3ABFF7" data-color-2="#0E1729"></script>
   </body>
 </html>
 
